@@ -1,6 +1,5 @@
 #define LOCALEDIR "./locale"
 #define ENABLE_NLS
-#define USE_PLUGIN
 #define USE_GMODULE
 #define USE_PLUGIN
 #define PACKAGE "xchat"
