@@ -221,7 +221,7 @@ a set limit for the distance it will move to the right. If you use a large font,
 may need to adjust this distance. It is set in pixels, for example:
 </p>
 <blockquote><pre>
-      /set max_auto_indent 320
+      /set text_max_indent 320
 </pre></blockquote>
 
 <p>
